# kg-enp

./: .cruft.json  LICENSE.txt  README.md  download.yaml  enpkg.yaml  merge.yaml  pyproject.toml  tox.ini
.github/workflows/: deploy-docs.yml  qc.yml
docs/: conf.py  index.rst
kg_enp/: __init__.py  download.py  query.py  run.py  transform.py
kg_enp/merge_utils/: merge_kg.py
kg_enp/transform_utils/: transform.py
kg_enp/transform_utils/atc/: __init__.py  atc-classes.py  atc-classes.yaml  atc.py  metadata.yaml
kg_enp/transform_utils/chembl_data/: __init__.py  chembl_data_transform.py
kg_enp/transform_utils/example_transform/: example_transform.py
kg_enp/transform_utils/ontology/: ontology_transform.py
kg_enp/utils/: pandas_utils.py  robot_utils.py
post_setup/: post_setup.py
templates/: README.build  README.toplevel
tests/: __init__.py  demo_test.py
